# enzyme-resistance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark_results_s2648/: best_predictions.csv  feature_matrix.csv  feature_matrix_6A.csv  final_feature_importances.csv  model_comparison_5fold.csv  selected_features.csv  target_values_6A.csv  valid_indices.csv  valid_pdb_ids.csv
data/datasets/: builtin_mutations.csv  fireprotdb_hf_mutations.csv  s2648_mutations.csv
enzyme_resistance/: __init__.py  __main__.py  benchmark.py  cli.py  contact_graph.py  features.py  mutation.py  published_baselines.py  resistance.py  resistance_cv.py  train.py
enzyme_resistance/data/: __init__.py  downloader.py
manuscript/: enzyme_resistance_application_note.docx  enzyme_resistance_supplementary.docx
scripts/: generate_figure1.py  generate_manuscript.py  run_benchmark.py  run_s2648_benchmark.py
tests/: test_basic.py
